kubernetes/networking/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: technologie-chmurowe-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - localhost
      secretName: nginx-secrets
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
